# Django-REST-CRUD

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yml
core/: client.py  mixins.py  serializers.py  urls.py  validators.py  views.py  viewsets.py
src/: routers.py  settings.py  urls.py
